--- a/style.css
+++ b/style.css
@@ -47,7 +47,7 @@ a{
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
+    height: 78vh;
 }
 
 .customize_button{
@@ -123,4 +123,41 @@ a{
     position: relative;
     z-index: 1;
     text-align: center;
+}
+
+/* история предсказаний*/
+
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0, 0, 0, 0.4);
+}
+
+.modal-content {
+  background-color: #333;
+  margin: 15% auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 80%;
+}
+
+.close {
+  color: #aaaaaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+  cursor: pointer;
+  position: relative;
+  top:0;
+  right: 0;
+}
+
+.close:hover {
+  color: #000;
 }
